5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4384/executions/1596_1016.log
== TEST (2019-04-02 15:54:44) 
-- CODE:
a=3.0
b=8.0
c=6.0
s=(a+b+c)
print("s")
-- OUTPUT:
s
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 15:54:53) 
-- CODE:
a=3.0
b=8.0
c=6.0
s=(a+b+c)
print("s")
-- OUTPUT:
s
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 15:55:02) 
-- CODE:
a=3.0
b=8.0
c=6.0
s=(a+b+c)
print("s")
-- OUTPUT:
s
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 15:55:15) 
-- CODE:
a=3.0
b=8.0
c=6.0
s=(a+b+c)
print("s, 5")
-- OUTPUT:
s, 5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 15:55:23) 
-- CODE:
a=3.0
b=8.0
c=6.0
s=(a+b+c)

print("s, 5")
-- OUTPUT:
s, 5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 15:55:25) 
-- CODE:
a=3.0
b=8.0
c=6.0
s=(a+b+c)

print("s, 5")
-- EXECUTION TIME:
0.198633
-- TEST CASE 1:
---- input:
11.0
19.5
13.2
---- correct output:
69.41967
---- user output:
s, 5
-- TEST CASE 2:
---- input:
30.0
40.0
50.0
---- correct output:
600.0
---- user output:
s, 5
-- TEST CASE 3:
---- input:
33.0
43.0
55.0
---- correct output:
709.16654
---- user output:
s, 5
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 15:55:39) 
-- CODE:
a= 3.0
b= 8.0
c= 6.0
s = (a+b+c)

print("s, 5")
-- OUTPUT:
s, 5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 15:55:41) 
-- CODE:
a= 3.0
b= 8.0
c= 6.0
s = (a+b+c)

print("s, 5")
-- EXECUTION TIME:
0.152642
-- TEST CASE 1:
---- input:
11.0
19.5
13.2
---- correct output:
69.41967
---- user output:
s, 5
-- TEST CASE 2:
---- input:
30.0
40.0
50.0
---- correct output:
600.0
---- user output:
s, 5
-- TEST CASE 3:
---- input:
33.0
43.0
55.0
---- correct output:
709.16654
---- user output:
s, 5
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 15:55:57) 
-- CODE:
a= 3
b= 8
c= 6
s = (a+b+c)

print("s, 5")
-- OUTPUT:
s, 5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 15:55:59) 
-- CODE:
a= 3
b= 8
c= 6
s = (a+b+c)

print("s, 5")
-- EXECUTION TIME:
0.167572
-- TEST CASE 1:
---- input:
11.0
19.5
13.2
---- correct output:
69.41967
---- user output:
s, 5
-- TEST CASE 2:
---- input:
30.0
40.0
50.0
---- correct output:
600.0
---- user output:
s, 5
-- TEST CASE 3:
---- input:
33.0
43.0
55.0
---- correct output:
709.16654
---- user output:
s, 5
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 15:57:25) 
-- CODE:
a= 3
b= 8
c= 6
s=a+b+c

print("s, 5")
-- OUTPUT:
s, 5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 15:57:28) 
-- CODE:
a= 3
b= 8
c= 6
s=a+b+c

print("s, 5")
-- EXECUTION TIME:
0.21055
-- TEST CASE 1:
---- input:
11.0
19.5
13.2
---- correct output:
69.41967
---- user output:
s, 5
-- TEST CASE 2:
---- input:
30.0
40.0
50.0
---- correct output:
600.0
---- user output:
s, 5
-- TEST CASE 3:
---- input:
33.0
43.0
55.0
---- correct output:
709.16654
---- user output:
s, 5
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 15:57:29) 
-- CODE:
a= 3
b= 8
c= 6
s=a+b+c

print("s, 5")
-- OUTPUT:
s, 5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 15:57:40) 
-- CODE:
a= 3
b= 8
c= 6
s= a+b+c

print("s")
-- OUTPUT:
s
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 15:57:55) 
-- CODE:
a = 3
b = 8
c = 6
s = a+b+c

print(" s ")
-- OUTPUT:
s
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 15:58:10) 
-- CODE:
a = 3
b = 8
c = 6
d = a+b+c

print(" d ")
-- OUTPUT:
d
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 15:58:20) 
-- CODE:
a = 3
b = 8
c = 6
d = a+b+c

print(d)
-- OUTPUT:
17
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 17:49:42) 
-- CODE:
a = 3
b = 8
c = 6
d = (a+b+c)/2

print(d)
-- OUTPUT:
8.5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 17:51:07) 
-- CODE:
a = 3
b = 8
c = 6
d = (a+b+c)/2
area= sqrt(d*(d-a)*(s-b)(s-c))
print(d)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    area= sqrt(d*(d-a)*(s-b)(s-c))
NameError: name 'sqrt' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 17:54:28) 
-- CODE:
a = 3
b = 8
c = 6
d = (a+b+c)/2
sqrt(d*(d-a)*(s-b)(s-c))
print(d,  5)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    sqrt(d*(d-a)*(s-b)(s-c))
NameError: name 'sqrt' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 17:54:28) 
-- CODE:
a = 3
b = 8
c = 6
d = (a+b+c)/2
sqrt(d*(d-a)*(s-b)(s-c))
print(d,  5)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    sqrt(d*(d-a)*(s-b)(s-c))
NameError: name 'sqrt' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 17:54:31) 
-- CODE:
a = 3
b = 8
c = 6
d = (a+b+c)/2
sqrt(d*(d-a)*(s-b)(s-c))
print(d,  5)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    sqrt(d*(d-a)*(s-b)(s-c))
NameError: name 'sqrt' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
